Clean up compiler warnings from the repo.  Left ValidateWorkItemStatesCommand and UserAllocationHelper as they appear to be half finished.